[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infrazeus"]
exclude = ["infrasets", "resources"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "infrazeus"
authors = [
    { name = "TeiaLabs", email = "contato@teialabs.com" }
]
description = "Teia Infra package"
readme = "README.md"
requires-python= ">=3.12"
keywords = ["infrastructure", "cloudformation", "aws"]
dynamic = ["version"]
dependencies = [
    "boto3~=1.34",
    "ipykernel>=6.29.5",
    "loguru~=0.7.2",
    "pydantic~=2.8",
    "python-dotenv>=1.0.1",
    "rich~=13.7",
    "typer~=0.12",
]

[project.optional-dependencies]
dev = [
    "black~=24.4",
    "isort~=5.13",
]

[project.scripts]
infrazeus = "infrazeus.__main__:app"
