[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infrazeus"]
exclude = ["infrasets", "resources"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0116",  # Missing function or method docstring
    "C0115", # Missing class module docstring
    "R0903",  # Too few public methods
    "W0311",  # Bad indentation (conflict with black)
]

[project]
name = "infrazeus"
authors = [
    { name = "TeiaLabs", email = "contato@teialabs.com" }
]
description = "Teia Infra package"
readme = "README.md"
requires-python= ">=3.12"
keywords = ["infrastructure", "cloudformation", "aws"]
dynamic = ["version"]
dependencies = [
    "boto3~=1.34",
    "ipykernel>=6.29.5",
    "loguru~=0.7.2",
    "pydantic~=2.8",
    "python-dotenv>=1.0.1",
    "rich~=13.7",
    "typer~=0.12",
]

[project.optional-dependencies]
dev = [
    "black~=24.4",
    "isort~=5.13",
    "pylint~=3.2"
]

[project.scripts]
infrazeus = "infrazeus.__main__:app"
